--- a/ngui/ui/package.json
+++ b/ngui/ui/package.json
@@ -29,7 +29,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@uiw/react-textarea-code-editor": "^2.1.1",
-    "@vitejs/plugin-react-swc": "^3.7.2",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "ajv": "^8.12.0",
     "analytics": "^0.8.1",
     "axios": "^1.7.4",
@@ -75,7 +75,7 @@
     "typescript": "^5.3.3",
     "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.0",
-    "vite": "^5.4.14",
+    "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
@@ -87,8 +87,8 @@
     "test:ci": "vitest -u --silent",
     "lint:check": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
-    "storybook": "storybook dev -p 9009 -s public",
-    "storybook:build": "storybook build -o ./storybook -s public",
+    "storybook": "storybook dev -p 9009",
+    "storybook:build": "storybook build -o ./storybook",
     "storybook:clean": "rm -rf src/tests/__snapshots__",
     "prettier:check": "prettier --check 'src/**/*.{ts,tsx,json}'",
     "prettier:fix": "prettier --write 'src/**/*.{ts,tsx,json}'",
@@ -113,14 +113,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@storybook/addon-actions": "^7.6.20",
-    "@storybook/addon-backgrounds": "^7.6.20",
-    "@storybook/addon-controls": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/react": "^7.6.20",
-    "@storybook/react-vite": "^7.6.20",
-    "@storybook/theming": "^7.6.5",
+    "@storybook/addon-actions": "^8.6.3",
+    "@storybook/addon-backgrounds": "^8.6.3",
+    "@storybook/addon-controls": "^8.6.3",
+    "@storybook/addon-links": "^8.6.3",
+    "@storybook/manager-api": "^8.6.3",
+    "@storybook/react": "^8.6.3",
+    "@storybook/react-vite": "^8.6.3",
+    "@storybook/theming": "^8.6.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
@@ -137,8 +137,8 @@
     "jsdom": "^22.1.0",
     "prettier": "^3.3.3",
     "redux-immutable-state-invariant": "^2.1.0",
-    "storybook": "^7.6.20",
+    "storybook": "^8.6.3",
     "typescript-eslint": "^8.19.1",
-    "vitest": "^0.34.6"
+    "vitest": "^3.0.7"
   }
 }
