OSS-142: Fixed spark vulnerability (#1437)

--- a/docker_images/ohsu/Dockerfile
+++ b/docker_images/ohsu/Dockerfile
@@ -1,6 +1,12 @@
 FROM apache/spark-py:v3.3.0
 ARG SPARK_HOME=/opt/spark
 USER root
+RUN apt-get update \
+    && apt-get install -y curl \
+    && apt-get autoremove -y \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY docker_images/ohsu/spark-defaults.conf $SPARK_HOME/conf/spark-defaults.conf
 RUN mkdir $SPARK_HOME/logs
 RUN chmod 777 $SPARK_HOME/logs
@@ -13,7 +19,9 @@ ADD https://repo1.maven.org/maven2/org/apache/httpcomponents/httpcore/4.4.15/htt
 # TODO: check where incompatible guava version comes from
 RUN rm /opt/spark/jars/guava-*
 ADD https://repo1.maven.org/maven2/com/google/guava/guava/21.0/guava-21.0.jar $SPARK_HOME/jars
-
+# Fixes CVE-2022-42889
+RUN curl -L -o $SPARK_HOME/jars/commons-text-1.10.0.jar https://repo1.maven.org/maven2/org/apache/commons/commons-text/1.10.0/commons-text-1.10.0.jar \
+    && rm $SPARK_HOME/jars/commons-text-1.9.jar
 WORKDIR $SPARK_HOME/work-dir/
 ENV PYTHONPATH $SPARK_HOME/work-dir/
 
